--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "main.py",
+            "args": ["-j", "1", "-r", "1"],
             "console": "integratedTerminal",
             "justMyCode": true
         }
